<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/style_kmeans"
    android:minHeight="250dp"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textViewFrag1"
        android:layout_width="0dp"
        android:layout_height="26dp"
        android:layout_marginBottom="74dp"
        android:layout_marginEnd="52dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/table_Frag1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2_K"
        app:layout_constraintEnd_toStartOf="@+id/editText_Frag1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_Frag1" />

    <EditText
        android:id="@+id/editText_Frag1"
        android:layout_width="146dp"
        android:layout_height="44dp"
        android:layout_marginBottom="77dp"
        android:layout_marginEnd="56dp"
        android:layout_marginRight="56dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/text_table_Frag1"
        android:ems="10"
        android:fadeScrollbars="false"
        android:inputType="textPersonName"
        android:isScrollContainer="false"
        app:layout_constraintBottom_toTopOf="@+id/editText2_k"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText2_k"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2_K"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="11dp"
        android:text="@string/numero_di_cluster_Frag1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/editText2_k"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText2_k"
        app:layout_constraintVertical_bias="0.294" />

    <EditText
        android:id="@+id/editText2_k"
        android:layout_width="147dp"
        android:layout_height="43dp"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="3dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="3dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/text_k_Frag1"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/fileName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/fileName"
        app:layout_constraintTop_toBottomOf="@+id/editText_Frag1" />

    <Button
        android:id="@+id/button_store_from_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:text="@string/mine_Frag1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/logTab"
        app:layout_constraintVertical_bias="0.536" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="52dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/nome_file_Frag1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/fileName"
        app:layout_constraintEnd_toStartOf="@+id/fileName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2_K"
        app:layout_constraintTop_toTopOf="@+id/fileName" />

    <EditText
        android:id="@+id/fileName"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginBottom="93dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:contentDescription="@string/nomefile_Frag1"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/logTab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/editText2_k" />

    <EditText
        android:id="@+id/logTab"
        android:layout_width="206dp"
        android:layout_height="186dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:ems="10"
        android:inputType="none"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/fileName" />

</android.support.constraint.ConstraintLayout>