<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView4_nomeFile"
        android:layout_width="94dp"
        android:layout_height="26dp"
        android:layout_marginBottom="120dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="15dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="62dp"
        android:text="@string/nome_file_Frag2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/load_logTab"
        app:layout_constraintEnd_toStartOf="@+id/load_filename"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/load_filename"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_marginBottom="109dp"
        android:layout_marginTop="52dp"
        android:contentDescription="@string/nome_file_F2"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/load_logTab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4_nomeFile"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2_store"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:text="@string/store_from_file_Frag2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/load_logTab"
        app:layout_constraintVertical_bias="0.731" />

    <EditText
        android:id="@+id/load_logTab"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="207dp"
        android:layout_marginEnd="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginStart="26dp"
        android:editable="false"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4_nomeFile" />

</android.support.constraint.ConstraintLayout>